testing/samples/helloworld/vs-distribute-locality-lb.yaml
# https://istio.io/latest/docs/tasks/traffic-management/locality-load-balancing/failover/
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: helloworld
  namespace: sample
spec:
  host: helloworld.sample.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        maxRequestsPerConnection: 1
    loadBalancer:
      simple: ROUND_ROBIN
      localityLbSetting:
        enabled: true
        distribute:
        - from: region1/*
          to:
            "region1/*": 90
            "region2/*": 10
        - from: region2/*
          to:
            "region2/*": 90
            "region1/*": 10

    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 1m
